[gd_scene load_steps=4 format=2]

[ext_resource path="res://Data/Sprites/shield.png" type="Texture" id=1]
[ext_resource path="res://Characters/Shield.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 98.0

[node name="Shield" type="Sprite"]
modulate = Color( 1, 1, 1, 0.25098 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="RegenCooldown" type="Timer" parent="."]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="RegenCooldown" to="." method="_on_RegenCooldown_timeout"]
